// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Body should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Body />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <LinearGradient
          gradientUnits="userSpaceOnUse"
          id="SVGID_3_"
          x1="106"
          x2="106"
          y1="-0.6199"
          y2="214.5018"
        >
          <Stop
            offset="0"
            stopColor="#FFF48E"
          />
          <Stop
            offset="0.9955"
            stopColor="#FFED44"
          />
        </LinearGradient>,
        <Circle
          cx="106"
          cy="106.4"
          fill="url(#SVGID_3_)"
          r="105"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Stop
              offset="0"
              stopColor="#FFF48E"
            />,
            <Stop
              offset="0.9955"
              stopColor="#FFED44"
            />,
          ],
          "gradientUnits": "userSpaceOnUse",
          "id": "SVGID_3_",
          "x1": "106",
          "x2": "106",
          "y1": "-0.6199",
          "y2": "214.5018",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "offset": "0",
              "stopColor": "#FFF48E",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "offset": "0.9955",
              "stopColor": "#FFED44",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "cx": "106",
          "cy": "106.4",
          "fill": "url(#SVGID_3_)",
          "r": "105",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <LinearGradient
            gradientUnits="userSpaceOnUse"
            id="SVGID_3_"
            x1="106"
            x2="106"
            y1="-0.6199"
            y2="214.5018"
          >
            <Stop
              offset="0"
              stopColor="#FFF48E"
            />
            <Stop
              offset="0.9955"
              stopColor="#FFED44"
            />
          </LinearGradient>,
          <Circle
            cx="106"
            cy="106.4"
            fill="url(#SVGID_3_)"
            r="105"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Stop
                offset="0"
                stopColor="#FFF48E"
              />,
              <Stop
                offset="0.9955"
                stopColor="#FFED44"
              />,
            ],
            "gradientUnits": "userSpaceOnUse",
            "id": "SVGID_3_",
            "x1": "106",
            "x2": "106",
            "y1": "-0.6199",
            "y2": "214.5018",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "offset": "0",
                "stopColor": "#FFF48E",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "offset": "0.9955",
                "stopColor": "#FFED44",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "cx": "106",
            "cy": "106.4",
            "fill": "url(#SVGID_3_)",
            "r": "105",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Body should render as grayscale 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Body
    isGrayScale={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <LinearGradient
          gradientUnits="userSpaceOnUse"
          id="SVGID_3_"
          x1="106"
          x2="106"
          y1="-0.6199"
          y2="214.5018"
        >
          <Stop
            offset="0"
            stopColor="#f9f9f9"
          />
          <Stop
            offset="0.9955"
            stopColor="#ededed"
          />
        </LinearGradient>,
        <Circle
          cx="106"
          cy="106.4"
          fill="url(#SVGID_3_)"
          r="105"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Stop
              offset="0"
              stopColor="#f9f9f9"
            />,
            <Stop
              offset="0.9955"
              stopColor="#ededed"
            />,
          ],
          "gradientUnits": "userSpaceOnUse",
          "id": "SVGID_3_",
          "x1": "106",
          "x2": "106",
          "y1": "-0.6199",
          "y2": "214.5018",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "offset": "0",
              "stopColor": "#f9f9f9",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "offset": "0.9955",
              "stopColor": "#ededed",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "cx": "106",
          "cy": "106.4",
          "fill": "url(#SVGID_3_)",
          "r": "105",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <LinearGradient
            gradientUnits="userSpaceOnUse"
            id="SVGID_3_"
            x1="106"
            x2="106"
            y1="-0.6199"
            y2="214.5018"
          >
            <Stop
              offset="0"
              stopColor="#f9f9f9"
            />
            <Stop
              offset="0.9955"
              stopColor="#ededed"
            />
          </LinearGradient>,
          <Circle
            cx="106"
            cy="106.4"
            fill="url(#SVGID_3_)"
            r="105"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Stop
                offset="0"
                stopColor="#f9f9f9"
              />,
              <Stop
                offset="0.9955"
                stopColor="#ededed"
              />,
            ],
            "gradientUnits": "userSpaceOnUse",
            "id": "SVGID_3_",
            "x1": "106",
            "x2": "106",
            "y1": "-0.6199",
            "y2": "214.5018",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "offset": "0",
                "stopColor": "#f9f9f9",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "offset": "0.9955",
                "stopColor": "#ededed",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "cx": "106",
            "cy": "106.4",
            "fill": "url(#SVGID_3_)",
            "r": "105",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
